# headroom

./: .dockerignore  .gitignore  404.html  Compression.md  Dockerfile  README.md  devto-article.md  docker-compose.yml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
ARCHITECTURE/: index.html
agno/: index.html
api/: index.html
benchmarks/: __init__.py  bench_relevance.py  bench_transforms.py  conftest.py  index.html  run_benchmarks.py
benchmarks/scenarios/: __init__.py  conversations.py  tool_outputs.py
ccr/: index.html
compression/: index.html
configuration/: index.html
docs/: ARCHITECTURE.md  README.md  api.md  configuration.md  memory.md  proxy.md  transforms.md
errors/: index.html
examples/: anthropic_example.py  basic_usage.py  fast_memory_e2e.py  groq_reasoning_test.py  inline_memory_demo.py  intelligent_context_integration_test.py  langchain_before_after.py  memory_e2e_test.py  memory_latency_benchmark.py  multi_tool_agent_test.py  multi_tool_compression_test.py  quality_retention_eval.py  real_data_demo.py  real_world_eval.py  real_world_openai_eval.py  reasoning_agent_debug_test.py  smart_vs_naive_eval.py  streaming_example.py
examples/langchain_demo/: mock_tools.py  run_comparison.py  show_compression.py  verify_errors_kept.py
getting-started/: index.html
headroom/: __init__.py  cli.py  client.py  compress.py  config.py  hooks.py  parser.py  utils.py
headroom/backends/: anyllm.py  (+1 more)
image-compression/: index.html
langchain/: index.html
llmlingua/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
proxy/: index.html
quickstart/: index.html
sdk/: index.html
search/: search_index.json
tests/: conftest.py  test_compress_api.py  test_compression_summary_integration.py  test_config.py  test_critical_fixes.py  test_image_compressor.py  test_memory_tracker_integration.py  test_memory_usage_integration.py  test_proxy_ccr.py  test_proxy_streaming_resilience.py  test_query_echo.py  test_toin_field_learning.py
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
(+73 files in other folders)
