[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "headroom"
version = "0.1.0"
description = "A safe, deterministic Context Budget Controller for LLM APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Headroom Team" }
]
keywords = [
    "llm",
    "openai",
    "context",
    "token",
    "optimization",
    "caching",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/headroom-sdk/headroom"
Documentation = "https://github.com/headroom-sdk/headroom#readme"
Repository = "https://github.com/headroom-sdk/headroom"

[tool.hatch.build.targets.wheel]
packages = ["headroom"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["headroom"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
